unpackaged/objects/wb_BudgetRate__c.object
<CustomObject>
    <description>WellBe Budget Exchange Rates</description>
    <fields>
        <fullName>BudgetYear__c</fullName>
        <label>予算年</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CeilingUnit__c</fullName>
        <label>切上単位</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromCurrency__c</fullName>
        <label>元通貨</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthCeilingUnit__c</fullName>
        <label>切上単位（月）</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>レート</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToCurrency__c</fullName>
        <label>切替通貨</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YearCeilingUnit__c</fullName>
        <label>切上単位（年）</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>予算レート</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>FromCurrency__c</columns>
        <columns>ToCurrency__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>予算レート名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>